# purescript-shake

./: .gitignore  README.md  psc-package.json  purescript-shake.cabal  stack.yaml  test.sh
purs/: Five.purs  Six.purs
src/: Main.hs
