cabal-version: 2.2

name: purescript-shake
version: 1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Jordan Mackie
maintainer: jordan.mackie@habito.com
-- copyright:
-- category:
build-type: Simple
--extra-source-files:

executable purs-shake
  main-is: Main.hs
  hs-source-dirs: src
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.12 && <4.13,
    aeson,
    text,
    purescript,
    shake,
    containers,
    mtl,
    directory,

  default-language: Haskell2010
